[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "guarantee-bettor"
version = "0.1.0"
description = "Latency arbitrage bot for Kalshi prediction markets"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0.0",
    "uvloop>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
bettor = "main:main"
